# aero-local-llm-server

./: .gitignore  KICKOFF.md  LICENSE  Makefile  PHASES.md  README.md  pyproject.toml
examples/: openai_agents_demo.py  openai_sdk_tools.py
src/aero/: __init__.py  cli.py  config.py  db.py  engine.py  rag.py  schemas.py  server.py  sizing.py  store.py  store_ops.py
tests/: test_admin.py  test_api.py  test_config.py  test_db.py  test_embed.py  test_engine.py  test_kb_api.py  test_rag.py  test_rag_chat.py  test_sizing.py  test_store.py  test_structured.py  test_tools.py  test_web.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.svelte  app.css  main.js
webui/src/lib/: Knobs.svelte  KnowledgeView.svelte  Message.svelte  ModelEditor.svelte  ModelsView.svelte  Sidebar.svelte  ThinkBlock.svelte  ToolCard.svelte  api.js  markdown.js
